# learn_c3

./: Cargo.toml  build.ps1  run.ps1
.cargo/: config.toml
src/: abc  main.rs
